# chess-gpt

./: .gitignore  README.md  end2end.py  initial_setup.sh  make_tokenizer.py  pyproject.toml  run_clm.py  run_clm_old.py  run_training.sh  self_play.py  test_model.py  tokenizer.py  tokenizer_2.py  training_data.py  utils.py
chess-llama/: config.json  tokenizer_config.json
custom_liger/: monkey_patch.py
custom_liger/model/: chess_llama.py
custom_liger/ops/: new_2.py  weighted_fused_linear_cross_entropy.py  weighted_liger_cross_entropy.py
custom_liger/transformers/: weighted_fused_linear_cross_entropy.py
model/: chess_llama.py
tokenizer-chess/: special_tokens_map.json  tokenizer.json
